== Frankencookie by itthinx - changelog.txt ==

= 2.0.0 =
* WordPress 6.6 compatible.
* Requires at least WordPress 6.0.
* Requires at least PHP 7.4.
* Added ABSPATH checks.
* Added the [frankencookie] shortcode.
* Replaced use of language domain constant with string literal.
* Refactored code and unified rendering.
* Added missing output escaping.
* Revised the plugin information.

= 1.1.0 =
* WordPress 5.7 compatible.

= 1.0.4 =
* Updated to use API functions for internal paths instead of WordPress constants.

= 1.0.3 =
* Changed the message and link CSS classes to make them more specific and avoid clashes with themes using the CSS class _hide_ to hide content.
* Updated the minimum required WordPress version and tested up to version info.

= 1.0.2 =
* WordPress 3.8 compatibility checked

= 1.0.1 =
* WordPress 3.6 compatibility checked

= 1.0.0 =
* Initial release.